# IICA

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: pages.yml  quality.yml
apps/admin/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/admin/src/app/: layout.tsx  page.tsx  styles.css
apps/admin/src/components/: admin-forms.tsx
apps/admin/src/lib/: supabase.ts
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/application/: __init__.py  evaluations.py
apps/api/src/infrastructure/: __init__.py
apps/api/src/infrastructure/persistence/: __init__.py  models.py  session.py
apps/api/src/presentation/: __init__.py
apps/api/src/presentation/http/: __init__.py  dependencies.py  main.py  schemas.py
apps/api/src/presentation/http/routers/: catalog.py  evaluations.py
apps/api/tests/: test_http.py
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx  styles.css
database/: README.md  alembic.ini
database/migrations/: env.py
database/migrations/versions/: 0001_initial_catalog_and_rules.py  0002_evaluation_history.py  0003_seed_colombia.py  0004_seed_bogota.py  0005_seed_verified_yaris_catalog.py  0006_seed_bogota_hybrid_tax_2026.py
database/seeds/: README.md  countries.json
docker/: README.md  admin.Dockerfile  api.Dockerfile  web.Dockerfile
docs/: architecture.md  production-deployment.md  roadmap.md
(+2 files in other folders)
