[project]
name = "iica-api"
version = "0.1.0"
description = "API del Índice Inteligente de Compra de Automóviles"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "pyjwt[crypto]>=2.10,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = ["httpx2>=0.1", "mypy>=1.11", "pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
files = ["src"]
